# net_operations

./: Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
net_operations/: __init__.py  remarks.md
net_operations/lib/: classes.py  constants.py  funcs.py  huawei_funcs.py  logger.py  os_functions.py
net_operations/lib/classes/: NetDevices.py  NetFiles.py  NetOperations.py  NetUser.py  NetworkOperations.py
net_operations/lib/huawei/: acc_users_funcs.py  main_info_funcs.py  nat_funcs.py
net_operations/scripts/: nat_report.py
templates/: bas_report.md.jinja2  report.jinja2
tests/: dummy_class.py  test_funcs.py  test_huawei_acc_users_funcs.py  test_huawei_funcs.py  test_huawei_nat_funcs.py  test_logger.py
tests/fixtures/: 000.txt  004.txt  005.txt  008.txt  009.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  019.txt  020.txt  021.txt  022.txt  023.txt  025.txt  026.txt  027.txt  028.txt  029.txt  030.txt  031.txt  032.txt  033.txt  034.txt  035.txt  036.txt  037.txt  038.txt  039.txt  040.txt  041.txt  042.txt  043.txt  044.txt  045.txt  046.txt  047.txt  048.txt  (+69 more)
