[tool.poetry]
name = "net-operations"
version = "0.1.0"
description = ""
authors = ["modemfux <modemfux@gmail.com>"]
readme = "README.md"
packages = [{include = "net_operations"}]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
paramiko = "^3.2.0"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
